added some section 1 desktop styles

--- a/css/style-main.css
+++ b/css/style-main.css
@@ -592,9 +592,9 @@ textarea {
     display: flex; } }
 
 .site-main .comment-navigation,
-.site-main
+.site-main,
 .posts-navigation,
-.site-main
+.site-main,
 .post-navigation {
   margin: 0 0 1.5em; }
 
