--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -66,7 +66,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-  ;
+
+    & + .section__two-colons-row {
+      margin-top: 120px;
+    }
   }
 
   &__colon {
