--- a/css/style-main.css
+++ b/css/style-main.css
@@ -345,6 +345,7 @@ h6 {
   clear: both; }
 
 p {
+  margin-top: 0;
   margin-bottom: 1.5em; }
   p:last-child {
     margin-bottom: 0; }
@@ -1007,10 +1008,15 @@ body {
   font-family: "Metropolis", serif;
   font-size: 16px;
   line-height: 1.75;
-  color: #40444E; }
+  color: #40444E;
+  margin-bottom: 20px; }
+  @media screen and (max-width: 1267px) {
+    body {
+      font-size: 14px;
+      line-height: 1.71; } }
 
 .marker {
-  display: inline-block;
+  display: block;
   font-weight: 800;
   background-image: url(../images/marker-back.svg);
   background-repeat: no-repeat;
@@ -1018,15 +1024,25 @@ body {
 
 .demo-theme__container {
   padding: 162px 0; }
+  @media screen and (max-width: 1267px) {
+    .demo-theme__container {
+      padding: 185px 0; } }
 
 .section {
   max-width: 1091px;
   margin: 0 auto; }
+  @media screen and (max-width: 1267px) {
+    .section {
+      padding: 0 20px; } }
   .section--grey {
     margin-top: 120px;
     padding-top: 120px;
     max-width: unset;
     background-color: #F3F5F9; }
+    @media screen and (max-width: 1267px) {
+      .section--grey {
+        margin-top: 60px;
+        padding: 60px 0; } }
   .section__title, .section__title h1 {
     text-align: center;
     color: #14121E; }
@@ -1038,6 +1054,11 @@ body {
     letter-spacing: -0.182px;
     color: #14121E;
     margin-bottom: 25px; }
+    @media screen and (max-width: 1267px) {
+      .section__title h1 {
+        font-size: 32px;
+        line-height: 1.3125;
+        margin-bottom: 24px; } }
     .section__title h1 span {
       font-weight: 400; }
   .section__two-colons-row {
@@ -1046,12 +1067,22 @@ body {
     justify-content: center;
     max-width: 1440px;
     margin: 0 auto; }
+    @media screen and (max-width: 1267px) {
+      .section__two-colons-row {
+        flex-direction: column;
+        padding: 0 20px;
+        max-width: 768px; } }
     .section__two-colons-row + .section__two-colons-row {
       margin-top: 120px; }
   .section__colon-right {
     max-width: 519px;
     flex: 0 0 519px;
     margin-left: 85px; }
+    @media screen and (max-width: 1267px) {
+      .section__colon-right {
+        margin-left: 0;
+        max-width: 100%;
+        flex: 0 0 100%; } }
   .section__colon-title {
     font-size: 30px;
     font-weight: 700;
@@ -1059,15 +1090,29 @@ body {
     letter-spacing: 0.1px;
     text-transform: capitalize;
     margin-bottom: 12px; }
+    @media screen and (max-width: 1267px) {
+      .section__colon-title {
+        font-size: 20px;
+        line-height: 1.8;
+        margin-bottom: 16px; } }
   .section__colon-text {
     padding-right: 7px;
     margin-bottom: 32px; }
+    @media screen and (max-width: 1267px) {
+      .section__colon-text {
+        padding-right: 0;
+        margin-bottom: 24px; }
+        .section__colon-text br {
+          display: none; } }
     .section__colon-text p {
       margin-top: 0; }
       .section__colon-text p:last-child {
         margin-bottom: 0; }
   .section__video-button {
     margin-bottom: 20px; }
+    @media screen and (max-width: 1267px) {
+      .section__video-button {
+        margin-bottom: 16px; } }
   .section__video-link {
     display: flex;
     align-items: center;
@@ -1077,11 +1122,22 @@ body {
     font-weight: 700;
     line-height: 1.5;
     text-transform: capitalize; }
+    @media screen and (max-width: 1267px) {
+      .section__video-link {
+        font-size: 14px;
+        line-height: 1.71; } }
     .section__video-link:hover img {
       transition: all 0.5s ease-out;
       transform: scale(1.1); }
     .section__video-link img {
       margin-right: 16px; }
+      @media screen and (max-width: 1267px) {
+        .section__video-link img {
+          width: 56px;
+          height: 56px; } }
+  @media screen and (max-width: 1267px) {
+    .section__button {
+      text-align: center; } }
   .section__button span {
     display: inline-block;
     line-height: 1.5;
@@ -1095,10 +1151,18 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: 1.5;
+    text-align: center;
     color: white;
     padding: 16px 24px;
     border-radius: 32px;
     background-color: #2E64F1; }
+    @media screen and (max-width: 1267px) {
+      .section__btn, .section__btn:visited {
+        max-width: fit-content;
+        min-width: 275px;
+        margin: 0 auto;
+        font-size: 14px;
+        line-height: 1.71; } }
   .section__btn:hover {
     background-color: white;
     color: #2E64F1;
@@ -1119,6 +1183,11 @@ body {
     text-transform: capitalize;
     text-align: center;
     margin-bottom: 48px; }
+    @media screen and (max-width: 1267px) {
+      .section-1__subtitle {
+        font-size: 20px;
+        line-height: 1.4;
+        margin-bottom: 15px; } }
   .section-1__text {
     max-width: 888px;
     margin: 0 auto 32px auto; }
@@ -1129,13 +1198,29 @@ body {
       line-height: 1.77;
       letter-spacing: -0.243px;
       text-align: center; }
+      @media screen and (max-width: 1267px) {
+        .section-1__text, .section-1__text p {
+          font-size: 14px;
+          line-height: 1.71; } }
   .section-1__text span {
     font-family: Metropolis, serif;
     font-weight: 600; }
   .section-1__image {
     margin-top: 61px; }
+    @media screen and (max-width: 1267px) {
+      .section-1__image {
+        margin-top: 32px; } }
   .section-1__banner, .section-1__bottom {
     margin-top: 64px; }
+    @media screen and (max-width: 1267px) {
+      .section-1__banner, .section-1__bottom {
+        margin-top: 0; } }
+  @media screen and (max-width: 1267px) {
+    .section-1__banner {
+      margin-top: 0; } }
+  @media screen and (max-width: 1267px) {
+    .section-1__bottom {
+      margin-top: 40px; } }
   .section-1__button {
     text-align: center; }
     .section-1__button span {
@@ -1149,6 +1234,11 @@ body {
     text-transform: capitalize;
     color: #14121E;
     margin-bottom: 30px; }
+    @media screen and (max-width: 1267px) {
+      .section-1__bottom-title {
+        font-size: 24px;
+        line-height: 1.75;
+        margin-bottom: 20px; } }
   .section-1__bottom-text {
     max-width: 725px;
     margin: 0 auto; }
@@ -1158,6 +1248,10 @@ body {
       font-weight: 400;
       line-height: 1.777;
       letter-spacing: -0.243px; }
+      @media screen and (max-width: 1267px) {
+        .section-1__bottom-text, .section-1__bottom-text p, .section-1__bottom-text span {
+          font-size: 14px;
+          line-height: 1.71; } }
 
 .section-2__title {
   font-size: 52px;
@@ -1166,6 +1260,11 @@ body {
   letter-spacing: -0.182px;
   text-transform: capitalize;
   margin-bottom: 60px; }
+  @media screen and (max-width: 1267px) {
+    .section-2__title {
+      font-size: 30px;
+      line-height: 1.33;
+      margin-bottom: 32px; } }
 
 .section-3 {
   margin-top: 120px; }
@@ -1176,6 +1275,14 @@ body {
     line-height: 1.30769;
     letter-spacing: -0.182px;
     margin-bottom: 60px; }
+    @media screen and (max-width: 1267px) {
+      .section-3__title {
+        font-size: 30px;
+        line-height: 1.33;
+        margin-bottom: 32px; } }
+  @media screen and (max-width: 1267px) {
+    .section-3 .section-3__two-colons-row-1 {
+      flex-direction: column-reverse; } }
   .section-3 .section-3__two-colons-row-1 .section__colon-text {
     max-width: 463px; }
   .section-3 .section-3__two-colons-row-2 .section__colon-text {
@@ -1184,6 +1291,11 @@ body {
     max-width: 528px;
     flex: 0 0 528px;
     margin-left: 93px; }
+    @media screen and (max-width: 1267px) {
+      .section-3__colon-right {
+        margin-left: 0;
+        max-width: 100%;
+        flex: 0 0 100%; } }
 
 .section-4__title {
   text-align: center;
@@ -1192,11 +1304,24 @@ body {
   line-height: 1.30769;
   letter-spacing: -0.182px;
   margin-bottom: 60px; }
+  @media screen and (max-width: 1267px) {
+    .section-4__title {
+      font-size: 30px;
+      line-height: 1.33;
+      margin-bottom: 32px; } }
 
 .section-4__colon-left {
   max-width: 487px;
   flex: 0 0 487px;
   margin-left: 93px; }
+  @media screen and (max-width: 1267px) {
+    .section-4__colon-left {
+      margin-left: 0;
+      max-width: 100%;
+      flex: 0 0 100%; } }
 
 .section-4__two-colons-row {
   padding-bottom: 120px; }
+  @media screen and (max-width: 1267px) {
+    .section-4__two-colons-row {
+      flex-direction: column-reverse; } }
