--- a/src/sass/sections/_section-1.scss
+++ b/src/sass/sections/_section-1.scss
@@ -15,6 +15,13 @@
     text-align: center;
 
     margin-bottom: 48px;
+
+    @media screen and (max-width: 1267px) {
+      font-size: 20px;
+      line-height: 1.4;
+
+      margin-bottom: 15px;
+    }
   }
 
   &__text {
@@ -29,6 +36,11 @@
       letter-spacing: -0.243px;
 
       text-align: center;
+
+      @media screen and (max-width: 1267px) {
+        font-size: 14px;
+        line-height: 1.71;
+      }
     }
   }
 
@@ -40,10 +52,30 @@
 
   &__image {
     margin-top: 61px;
+
+    @media screen and (max-width: 1267px) {
+      margin-top: 32px;
+    }
   }
 
   &__banner, &__bottom {
     margin-top: 64px;
+
+    @media screen and (max-width: 1267px) {
+      margin-top: 0;
+    }
+  }
+
+  &__banner {
+    @media screen and (max-width: 1267px) {
+      margin-top: 0;
+    }
+  }
+
+  &__bottom {
+    @media screen and (max-width: 1267px) {
+      margin-top: 40px;
+    }
   }
 
   &__button {
@@ -67,6 +99,13 @@
       color: $h1_color;
 
       margin-bottom: 30px;
+
+      @media screen and (max-width: 1267px) {
+        font-size: 24px;
+        line-height: 1.75;
+
+        margin-bottom: 20px;
+      }
     }
 
     &-text {
@@ -80,6 +119,11 @@
         font-weight: 400;
         line-height: 1.777;
         letter-spacing: -0.243px;
+
+        @media screen and (max-width: 1267px) {
+          font-size: 14px;
+          line-height: 1.71;
+        }
       }
     }
   }
