--- a/src/sass/sections/_section-1.scss
+++ b/src/sass/sections/_section-1.scss
@@ -3,6 +3,12 @@
   flex-direction: column;
   align-items: center;
 
+  padding-bottom: 120px;
+
+  @media screen and (max-width: 1267px) {
+    padding-bottom: 60px;
+  }
+
   &__subtitle {
     font-family: Metropolis, serif;
     font-size: 30px;
