--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -44,6 +44,14 @@ body {
     padding: 0 20px;
   }
 
+  &-container {
+    position: relative;
+
+    background-color: white;
+
+    z-index: 2;
+  }
+
   &--grey {
     margin-top: 120px;
     padding-top: 120px;
