--- a/src/sass/_sections.scss
+++ b/src/sass/_sections.scss
@@ -2,3 +2,5 @@
 @import "sections/_section-2";
 @import "sections/_section-3";
 @import "sections/_section-4";
+
+@import "sections/_parallax-section";
